syntax = "proto3";

package org.samodumkina.stubs.product;

option java_multiple_files = true;

service ProductService{
  rpc getProduct(ProductRequest) returns (ProductResponse);
}

message ProductRequest{
  int32 product_id = 1;
}

message ProductResponse{
  int32 product_id = 1;
  string name = 2;
  double price = 3;
  int32 quantity = 4;
}
